--- a/templates/etc-crond-postgresql-backup.j2
+++ b/templates/etc-crond-postgresql-backup.j2
@@ -1,4 +1,4 @@
-#!/usr/bin/bash
+#!/bin/bash
 # Dump all PostgreSQL databases
 
 OUTPUT="{{ postgresql_backup_dir | quote }}/$(date +{{ postgresql_backup_filename_format | quote }})"
