--- a/templates/etc-crond-postgresql-backup.j2
+++ b/templates/etc-crond-postgresql-backup.j2
@@ -10,5 +10,7 @@ if [ $size -lt {{ postgresql_backup_minimum_expected_size }} ]; then
     exit 2
 fi
 
-mv "$OUTPUT.tmp" "$OUTPUT"
-echo "SUCCESS: Database backup '$OUTPUT' completed" 2>&1 | /usr/bin/logger -t backup
+echo "Compressing database backup"
+gzip "$OUTPUT.tmp"
+mv "$OUTPUT.tmp.gz" "$OUTPUT.gz"
+echo "SUCCESS: Database backup '$OUTPUT.gz' completed" 2>&1 | /usr/bin/logger -t backup
